--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,34 @@ _ReSharper*/
 
 # Ignore VS Code extensions folder
 .vscode/extensions.json
+
+
+
+
+
+for Frontend
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
